feat:force login with predefined token

--- a/src/components/blocks/existing-accounts-list/existing-account/ExistingAccount.scss
+++ b/src/components/blocks/existing-accounts-list/existing-account/ExistingAccount.scss
@@ -2,11 +2,15 @@
     @apply px-5 py-4 rounded-[4px] border border-solid border-black-pure flex items-center justify-start gap-7;
     @apply hover:bg-orange-weak;
 
-    .avatar {
-        @apply block shrink-0 w-16 h-16 rounded-full overflow-hidden;
-    }
+    .button-child {
+        @apply grow flex items-center justify-start gap-7;
 
-    .welcome {
-        @apply font-medium font-quicksand text-lg grow;
+        .avatar {
+            @apply block shrink-0 w-16 h-16 rounded-full overflow-hidden;
+        }
+
+        .welcome {
+            @apply font-medium font-quicksand text-lg grow text-start;
+        }
     }
 }
