--- a/src/components/blocks/forms/auth-form/AuthForm.scss
+++ b/src/components/blocks/forms/auth-form/AuthForm.scss
@@ -1,5 +1,5 @@
-.app-login-form {
-    @apply bg-white-pure px-[10%] py-12 flex flex-col items-stretch justify-center pb-[10%];
+.app-auth-form {
+    @apply bg-white-pure px-[10%] py-12 flex flex-col items-stretch justify-center pb-[10%] h-full rounded-[10px] overflow-hidden;
 
     .title {
         @apply mb-1 text-black-pure font-quicksand text-2xl font-bold;
