--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
+@use './icons.scss';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import './icons.scss';
 
 .has-transitions {
     @apply transition-all duration-300;
