feat:working audio player

--- a/src/components/generics/buttons/control-button/ControllButton.scss
+++ b/src/components/generics/buttons/control-button/ControllButton.scss
@@ -1,3 +1,5 @@
 .app-control-button {
-    @apply w-9 h-9 block aspect-square p-2;
+    .icon {
+        @apply w-9 h-9 block aspect-square p-2;
+    }
 }
