--- a/src/components/partials/sidebar/Sidebar.scss
+++ b/src/components/partials/sidebar/Sidebar.scss
@@ -1,3 +1,3 @@
 .app-sidebar {
-    @apply flex-grow-0 flex-shrink-0 w-fit flex flex-col items-center justify-start;
+    @apply flex-grow-0 flex-shrink-0 w-fit flex flex-col items-center justify-start h-full;
 }
