feat:basic context menu

--- a/src/components/generics/wrappers/scrollable-content/ScrollableContent.scss
+++ b/src/components/generics/wrappers/scrollable-content/ScrollableContent.scss
@@ -1,3 +1,7 @@
+.app-current-track-wrapper.playing .app-scrollable-content.has-current-track {
+    @apply pb-48;
+}
+
 .app-scrollable-content {
     @apply w-full h-full block overflow-hidden;
 
