--- a/src/components/generics/wrappers/scrollable-content/ScrollableContent.scss
+++ b/src/components/generics/wrappers/scrollable-content/ScrollableContent.scss
@@ -1,14 +1,18 @@
+.app-current-track-wrapper.playing .app-scrollable-content.has-current-track {
+    @apply pb-48;
+}
+
 .app-scrollable-content {
-    @apply w-full h-full block overflow-hidden;
+    @apply block overflow-hidden;
 
     transition: scrollbar-color 0.3s ease-in-out;
 
     &.horizontal, &.both {
-        @apply overflow-x-scroll;
+        @apply w-full overflow-x-scroll;
     }
 
     &.vertical, &.both {
-        @apply overflow-y-scroll;
+        @apply h-full overflow-y-scroll;
     }
 
     &.has-scrollbar {
